--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.3.3",
+    "@types/css-modules": "^1.0.5",
     "@types/firebase": "^2.4.32",
     "@types/node": "^20",
     "@types/react": "^18",
