--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
   "name": "shindo-api",
-  "version": "0.1.0",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
+    "lint": "next lint"
   },
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "firebase-admin": "^12.6.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "swr": "^2.2.5"
   },
-  "devDependencies": {
-    "@next/eslint-plugin-next": "^15.3.3",
-    "@types/css-modules": "^1.0.5",
-    "@types/firebase": "^2.4.32",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^15.3.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
-    "typescript": "^5"
+  "engines": {
+    "node": ">=18"
   }
 }
