--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "next": "14.2.5",
+    "next": "14.2.19",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "swr": "^2.2.5"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.11",
+    "typescript": "^5.9.2"
   }
 }
