--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,21 @@
 
 # testing
 /coverage
+.nyc_output
 
 # next.js
 /.next/
 /out/
+
+# Nuxt.js
+.nuxt
+.output
+.nitro
+.cache
+dist
+.function
+.functions
+.functions-framework-*
 
 # production
 /build
@@ -21,10 +32,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # local env files
-.env*.local
 .env
+.env.*
+!.env.example
 
 # vercel
 .vercel
@@ -38,3 +51,20 @@ next-env.d.ts
 !.vscode/settings.json
 !.vscode/extensions.json
 .idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS generated files
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# pnpm
+.pnpm-store/
+node_modules/.pnpm-debug.log
