--- a/vercel.json
+++ b/vercel.json
@@ -13,9 +13,18 @@
     }
   ],
   "routes": [
-    { "handle": "files" },
-    { "src": "/api/(.*)", "dest": "/api" },
-    { "src": "/_nuxt/(.*)", "dest": "/_nuxt/$1" },
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/_nuxt/(.*)",
+      "headers": { "cache-control": "public,max-age=31536000,immutable" },
+      "dest": "/_nuxt/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
