--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "nuxt.config.ts",
-      "use": "@nuxt/vercel-builder",
+      "src": "package.json",
+      "use": "@vercel/static-build",
       "config": {
-        "serverFiles": [
-          "package.json",
-          "nuxt.config.ts"
-        ]
+        "distDir": ".output/public"
       }
     }
   ],
