--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@nuxt/schema": "^4.0.3",
     "@types/node": "^24.3.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vue/compiler-sfc": "^3.5.20",
+    "@vue/runtime-dom": "^3.5.20",
     "typescript": "^5.9.2",
     "vue-tsc": "^3.0.6"
   }
