--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "vercel-build": "pnpm install && nuxt build",
     "preinstall": "pnpm approve-builds esbuild @parcel/watcher vue-demi"
   },
   "dependencies": {
