--- a/vercel.json
+++ b/vercel.json
@@ -9,19 +9,13 @@
       }
     }
   ],
+  "buildCommand": "nuxt build",
+  "outputDirectory": ".output/public",
+  "framework": "nuxt",
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/_nuxt/(.*)",
-      "headers": { "cache-control": "public,max-age=31536000,immutable" },
-      "dest": "/_nuxt/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "handle": "filesystem" },
+    { "src": "/api/(.*)", "dest": "/api" },
+    { "src": "/_nuxt/(.*)", "dest": "/_nuxt/$1", "headers": { "cache-control": "public,max-age=31536000,immutable" } },
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
