--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,16 @@
       }
     }
   ],
-  "buildCommand": "nuxt build",
-  "outputDirectory": ".output/public",
-  "framework": "nuxt",
   "routes": [
-    { "handle": "filesystem" },
-    { "src": "/api/(.*)", "dest": "/api" },
-    { "src": "/_nuxt/(.*)", "dest": "/_nuxt/$1", "headers": { "cache-control": "public,max-age=31536000,immutable" } },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { 
+      "src": "/_nuxt/(.*)", 
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/_nuxt/$1"
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "/index.html"
+    }
   ]
 }
