--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://pagead2.googlesyndication.com https://static.cloudflareinsights.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https:; media-src 'self'; object-src 'none'; frame-src 'self' https://www.youtube.com;"
+          "value": "default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*.googlesyndication.com https://*.googleusercontent.com https://googleads.g.doubleclick.net; frame-src https://raz0red.github.io https://*.github.io https://wasm.continuation-labs.com https://js-dos.com https://archive.org https://dos.zone https://*.dos.zone; child-src https://raz0red.github.io https://*.github.io https://wasm.continuation-labs.com https://js-dos.com https://archive.org https://dos.zone https://*.dos.zone; connect-src 'self' https://pagead2.googlesyndication.com; object-src 'none'; base-uri 'self'; frame-ancestors 'self';"
         },
         {
           "key": "X-Content-Type-Options",
