--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,6 @@
       }
     }
   ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-      ]
-    }
-  ],
   "routes": [
     { 
       "src": "/api/(.*)", 
@@ -30,6 +23,13 @@
     },
     { 
       "src": "/(.*)", 
+      "headers": {
+        "X-Content-Type-Options": "nosniff",
+        "X-Frame-Options": "SAMEORIGIN",
+        "X-XSS-Protection": "1; mode=block",
+        "Referrer-Policy": "strict-origin-when-cross-origin",
+        "Permissions-Policy": "camera=(), microphone=(), geolocation=()"
+      },
       "dest": "/index.html"
     }
   ]
