--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,16 @@
 {
+  "version": 2,
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/api/$1",
+      "methods": ["GET", "POST", "OPTIONS"],
       "headers": {
-        "Cache-Control": "no-store, no-cache, must-revalidate, proxy-revalidate",
+        "Cache-Control": "no-store, no-cache, must-revalidate",
         "Pragma": "no-cache",
         "Expires": "0",
         "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "GET,OPTIONS",
+        "Access-Control-Allow-Methods": "GET, OPTIONS",
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type"
       }
     },
@@ -16,7 +18,7 @@
       "src": "/(.*)",
       "dest": "/",
       "headers": {
-        "Cache-Control": "no-store, no-cache, must-revalidate, proxy-revalidate",
+        "Cache-Control": "no-store, no-cache, must-revalidate",
         "Pragma": "no-cache",
         "Expires": "0"
       }
