--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,12 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1",
-      "methods": ["GET", "POST", "OPTIONS"],
+      "methods": ["GET", "OPTIONS"],
       "headers": {
-        "Cache-Control": "no-store, no-cache, must-revalidate",
+        "Cache-Control": "no-cache, no-store, must-revalidate",
         "Pragma": "no-cache",
         "Expires": "0",
+        "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, OPTIONS",
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type"
@@ -18,11 +19,10 @@
       "src": "/(.*)",
       "dest": "/",
       "headers": {
-        "Cache-Control": "no-store, no-cache, must-revalidate",
+        "Cache-Control": "no-cache, no-store, must-revalidate",
         "Pragma": "no-cache",
         "Expires": "0"
       }
     }
   ]
 }
-
