--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "package.json", "use": "@vercel/node" },
+    { "src": "api/**/*.ts", "use": "@vercel/node" },
+    { "src": "server/api/**/*.ts", "use": "@vercel/node" }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/api/$1",
       "methods": ["GET", "OPTIONS"],
       "headers": {
+        "Content-Type": "application/json",
         "Cache-Control": "no-cache, no-store, must-revalidate",
         "Pragma": "no-cache",
         "Expires": "0",
-        "Content-Type": "application/json",
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, OPTIONS",
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type"
@@ -17,7 +22,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/",
+      "dest": "/index.html",
       "headers": {
         "Cache-Control": "no-cache, no-store, must-revalidate",
         "Pragma": "no-cache",
