--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,20 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
+      "dest": "/api/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type"
+      }
     }
-  ]
+  ],
+  "functions": {
+    "api/status.get.ts": {
+      "maxDuration": 10
+    },
+    "api/*.[tj]s": {
+      "maxDuration": 10
+    }
+  }
 }
