--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "release": "nuxt build && vercel deploy --prebuilt --prod"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.2.6",
     "autoprefixer": "^10.4.21",
