--- a/package.json
+++ b/package.json
@@ -13,25 +13,26 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vueuse/core": "^11.3.0",
     "@vueuse/motion": "^2.2.6",
     "autoprefixer": "^10.4.21",
     "chart.js": "^4.5.0",
     "h3": "^1.15.4",
     "lucide-vue-next": "^0.542.0",
-    "nuxt": "^3.18.1",
+    "nuxt": "^3.19.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
-    "@nuxt/schema": "^4.0.3",
-    "@types/node": "^24.3.0",
+    "@nuxt/schema": "^4.1.2",
+    "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
-    "@vue/compiler-sfc": "^3.5.20",
-    "@vue/runtime-dom": "^3.5.20",
-    "nitropack": "^2.12.4",
+    "@vue/compiler-sfc": "^3.5.21",
+    "@vue/runtime-dom": "^3.5.21",
+    "nitropack": "^2.12.6",
     "typescript": "^5.9.2",
-    "vue-tsc": "^3.0.6"
+    "vue-tsc": "^3.0.7"
   }
 }
